# onscreen-translator

./: .gitignore  README.md  install-ollama.sh  install.sh  onscreen-translator-trigger  pyproject.toml
data/: onscreen-translator.desktop
onscreen_translator/: main.py
onscreen_translator/config/: settings.py
onscreen_translator/ocr_translate/: ocr.py  translator.py
onscreen_translator/overlay/: live_overlay.py  style.css  translation_overlay.py  window.py
onscreen_translator/portal/: gnome_screenshot.py  screencast.py  screenshot.py  shortcuts.py
