[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "onscreen-translator"
version = "0.1.0"
description = "Live on-screen translator for Linux/Wayland"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7",
    "deepl>=1.17",
]

[project.scripts]
onscreen-translator = "onscreen_translator.main:main"

[tool.setuptools.packages.find]
where = ["."]
